--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,1 @@
-# Object files
-*.o
-
-# Libraries
-*.lib
-*.a
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
+var/www/html/plugins.srokap.pl
